--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="profile-pic">
 
-<img src="img/foto-anderson.jpg" alt="foto-anderson"
+<img src="img/perfil.jfif" alt="perfil"
 width="300px"
 height="300px"/>
 
