--- a/Curriculo.html
+++ b/Curriculo.html
@@ -54,7 +54,7 @@ height="300px"/>
 
 <h2>Sobre Mim</h2>
 <hr>
-<p>Meu nome é Anderson Casimiro.Sou Front-end developer.Desenvolvo interfaces modernas e de alta qualidade, concentrado em performance, animações, responsividade e SEO.</p>
+<p>Meu nome é Anderson Casimiro.Sou Desenvolvedor Full-Stack.</p>
 
 <h2>EDUCAÇÃO</h2>
 <hr>
@@ -65,72 +65,47 @@ height="300px"/>
 
 <h2>Experiência de Trabalho</h2>
 <hr>
-<h3>11/2019 - 01/2021</h3>
+<h3>11/2019 - 04/2020</h3>
 <P>Jovem Aprendiz Suporte TI- Atacadão SA - Rio de Janeiro</P>
 <p> ✔️ Atividades de desempenhadas:<br>
 - Suporte N1 e N2 ao Cliente Remoto e Presencial, atualização de software e hardware, troca de equipamentos, responsável pela atualização das máquinas, instalação de impressoras.
 Responsável pela criação de procedimentos relativos ao setor.</p>
-<h3>01/2021 - 07/2021</h3>
+<h3>04/2020 - 11/2020</h3>
 <p>Assistente Suporte TI - GRUPO EBD - Rio de Janeiro</p>
 <p> ✔️ Atividades de desempenhadas:<br>
 - Suporte n1 e n2, diagnostico de maquinas e instalações de novos programas.</p>
-<h3>07/2021 - 11/2021</h3>
-<p>Estagiário de desenvolvimento - Selbetti Tecnologia - Rio de Janeiro</p>
+<h3>09/2020 - 10/2021</h3>
+<p>Analista de Suporte N2 - Selbetti Tecnologia - Rio de Janeiro</p>
 <p>✔️ Atividades de desempenhadas:<br>
- -Programação Java orientada a objetos, Design Patterns.<br>
+ -Atuando com suporte N1 e N2 remoto e presencial.<br>
 
- -Desenvolvimento de aplicações e serviços REST.<br>
+ -suporte help desk para colaboradores.<br>
 
- -Arquitetura e melhores práticas de desenvolvimento.<br>
+ -configuração e instalação de novos pacotes offices.<br>
 
 
- -Kubernetes e Spring Cloud. <br>
+ -windows e gestão e configuração de novas impressoras na faculdade. <br>
 
- -Integrações com Kafka.<br>
+ -Atendimento via e-mail, telefone e chat online<br>
 
- -Conceitos de testes unitários, micro serviços e arquitetura distribuída.Desenvolvimento de um novo produto. <br>
- -Tecnologias:<br>
- -Elixir <br>
- -Node.js <br>
- -React <br>
- -TypeScript <br>
- -Programação Java orientada a objetos, Design Patterns. <br>
- -Desenvolvimento de aplicações e serviços REST. <br>
- -Arquitetura e melhores práticas de desenvolvimento. <br>
- -Kubernetes e Spring Cloud. <br>
- -Integrações com Kafka. <br>
- -Conceitos de testes unitários, micro serviços e arquitetura distribuída.<br>
- -Competências: <br>
- · NET Framework <br>
- · Reactjs <br>
- · AngularJS <br>
- · Microsserviços <br>
- · JavaScript <br>
- · C# <br>
- · MongoDB <br>
- · Java</p><br>
+ -Mais de 400 chamados atendidos no mês. <br>
+
 
 <h3>08/2021 - 02/2022 </h3>
-<p>Estagiário de Desenvolvimento - C2S - Remoto</p>
+<p>Estagiário de TI CX - C2S - Remoto</p>
 <p>✔️ Atividades de desempenhadas: <br>
-- Atuava com CSS <br>
-- HTML <br>
-- JavaScript <br>
-- Git <br>
-- Github <br>
-- atuando com a biblioteca HTML5 BoilerPlate <br>
-- Cloud (AWS) e alguns Frameworks. <br>
-- Dando suporte a projetos de desenvolvimento.<br>
-- Também atuando com NodeJS<br>
-- Express<br>
-- NestJS<br>
-- TypeScript<br>
-- JavaScript<br>
-- PostgreSQL<br>
-- Azure<br>
-- MongoDB<br>
-- Cloud AWS.</p><br>
-<h3>02/2022 - 06/2022 - Remoto</h3>
+- Atuando na parte de implantação e integração de novos sistemas na plataforma. <br>
+- Google Workspace <br>
+- Olx <br>
+- WebMotors <br>
+- Implantação via API REST ( Assíncrono e Síncrono); <br>
+- Configuração do projeto em Ambiente de homologação e Produção; <br>
+- Atualização de Atividades em sistema e comunicação direta com o cliente sobre próximos passos; <br>
+- Reuniões com o cliente para sanar e apresentar o andamento do processo;<br>
+- Apresentação do Sistema depois de integrado e homologado.<br>
+- Apresentação do Sistema depois de integrado e homologados;<br>
+- Treinamento direto ao cliente sobre funcionalidades e como realizar novas integrações;</p><br>
+<h3>02/2022 - 12/2022 - Remoto</h3>
 <p>Analista de Sistemas - DXC TECHNOLOGY - Remoto</p>
 <p>✔️ Atividades de desempenhadas:<br>
 
@@ -161,7 +136,29 @@ Responsável pela criação de procedimentos relativos ao setor.</p>
  · MongoDB <br>
  · PostgreSQL <br>
  · Java</p><br>
+ 
+ <h3>01/2022 - 10/2022 - Remoto</h3>
+<p>Analista de Sistemas - E-trust - Remoto</p>
+<p>✔️ Atividades de desempenhadas:<br>
 
+- Criação, levantamentos e especificações de requisitos;<br>
+- Criação de planos de integração para Homologação e Produção de projetos;<br>
+- Gerenciamento de banco de dados;<br>
+- Metodologias Ágil (Scrum, KANBAN, etc);<br>
+- Banco de Dados SQL <br>
+- Configurações sistêmicas como mapeamentos de Regras de Negócios;  <br>
+- Criação de Scripts PHP e PowerShell para as soluções propostas;  <br>
+- PostMan para manipulação de API;  <br>
+- Integração com MS AD, Azure AD, SAP, Rest (síncrono e assíncrono), SOAP, etc... <br>
+- Investigação de bugs através de logs SSH em servidores Linux e consultas LDAP;  <br>
+- Manipulação e consultas em MariaDB/MySQL DataBase;
+- Participar da implementação e da manutenção de novos sistemas; <br>
+- Jira Atlassian para gerenciamento de tickets urgentes propostos pelos usuários;  <br>
+- Análise e teste de novas funcionalidades para o sistema.  <br>
+- Fornecer treinamentos e apresentações do sistema aos clientes;</p><br>
+
+
+ 
 <a href="https://github.com/Anderson0933"><img class="gitlg" src="img/gitlg.png" alt="link para o link">
     <br><br>
  <a href="index.html">Voltar ao início</a>
