--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ height="300px"/>
 
 <div class="profile-title">
 <h1>Anderson <span>Casimiro</span></h1>
-<h2>Full-Stack developer - Web Design - Desenvolvedor Web</h2>
+<h2>Full-Stack developer - Back-End - Developer</h2>
 </div>
 
 
