--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@ height="300px"/>
 <div class="profile-title">
 <h1>Anderson <span>Casimiro</span></h1>
 <h2>Full-Stack developer - Back-End - Developer</h2>
+
+<img src="img/JavaScript-logo.png" alt="foto"
+width="20px"
+height="20px">
+
+<img src="img/Typescript_logo_2020.svg.png" alt="foto"
+width="20px"
+height="20px">
+
+<img src="img/Csharp_Logo.png" alt="foto"
+width= "20px"
+height="20px">
+<img src="img/mongo db.png" alt="foto"
+width="20px"
+height="20px">
 </div>
 
 
