--- a/Contato.html
+++ b/Contato.html
@@ -42,7 +42,7 @@
 <h3>Redes Sociais:</h3>
 <a href="https://www.linkedin.com/in/anderson-casimiro/"><img class="social-img" src="img/luk.jpg" alt="link para o link">
 <br><br><br>
-<a class="back-link" href="index.html">Voltar ao início</a>
+<a class="buttomVoltar" href="index.html"><button class="buttomVoltar">Voltar</button></a>
 </div>
 
 
