--- a/Curriculo.html
+++ b/Curriculo.html
@@ -31,12 +31,12 @@
 <li>Curriculo</li>
 </ul>
 
-<h1>Curriculo</h1>
+
 
 <h2>Dados Pessoais</h2>
 <hr>
 
-<img class="cv-pic" src="img/foto-anderson.jpg" alt="foto-anderson"
+<img class="cv-pic" src="img/perfil.jfif" alt="foto-anderson"
 width="300px"
 height="300px"/>
 
@@ -155,18 +155,8 @@ Responsável pela criação de procedimentos relativos ao setor.</p>
 - Análise e teste de novas funcionalidades para o sistema.  <br>
 - Fornecer treinamentos e apresentações do sistema aos clientes;</p><br>
 
-
- 
 <a href="https://github.com/Anderson0933"><img class="gitlg" src="img/gitlg.png" alt="link para o link">
-<a href="https://drive.google.com/file/d/1OvqBEhKFj-UP1YbEUpSm81Mll-8guhkB/view?usp=sharing"><img  class="gitlg"src="img/botão ppnf.png" alt="foto">
     <br><br>
- <a href="index.html">Voltar ao início</a>
-
-
-
-</div>
-
-
-
-
+    <a href="https://drive.google.com/file/d/1OvqBEhKFj-UP1YbEUpSm81Mll-8guhkB/view?usp=sharing"><button class="buttomVoltar">Donwload</button></a>
+    </div>
 </body>
