--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
 
 <div class="capa">
-
 <div class="profile-pic">
 
 <img src="img/perfil.jfif" alt="perfil"
@@ -35,7 +34,7 @@ height="300px"/>
 
 <div class="profile-title">
 <h1>Anderson <span>Casimiro</span></h1>
-<h2>Full-Stack developer - Back-End - Developer</h2>
+<h2>Full-Stack Developer - Developer</h2>
 
 <img src="img/JavaScript-logo.png" alt="foto"
 width="20px"
@@ -45,21 +44,17 @@ height="20px">
 width="20px"
 height="20px">
 
-<img src="img/Csharp_Logo.png" alt="foto"
-width= "20px"
-height="20px">
 <img src="img/mongo db.png" alt="foto"
 width="20px"
 height="20px">
+
+<img src="img/Csharp_Logo.png" alt="foto"
+width= "20px"
+height="20px">
+
 </div>
-
-
 </div>
-
-
 
 
 </body>
-
-
 </HTML>
